# agentic_ai-crew-ai-debate-engine

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/debate_engine/: crew.py  leaderboard.py  main.py
src/debate_engine/config/: agents.yaml  tasks.yaml
tests/: test_smoke.py
