[project]
name = "crewai-debate-engine"
version = "0.1.0"
description = "Multi-agent courtroom debate simulation with CrewAI (prosecution, defense, judge, evidence, fact-check)."
readme = "README.md"
authors = [{ name = "Contributors" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,litellm,tools]==1.10.1",
    "python-dotenv>=1.0.1",
    "gradio>=4.44.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
debate_engine = "debate_engine.main:run"
run_crew = "debate_engine.main:run"
train = "debate_engine.main:train"
replay = "debate_engine.main:replay"
test = "debate_engine.main:test"
run_with_trigger = "debate_engine.main:run_with_trigger"
debate_leaderboard = "debate_engine.leaderboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/debate_engine"]

[tool.crewai]
type = "crew"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
